--- a/email.html
+++ b/email.html
@@ -4,7 +4,7 @@
   <style>
     body {
       font-family: 'Google Sans', 'Roboto', 'Segoe UI', Arial, sans-serif;
-      background-color: #f8f9fa;
+      background-color: #f0f4f8;
       margin: 0;
       padding: 0;
       color: #3c4043;
@@ -13,40 +13,65 @@
       max-width: 600px;
       margin: 40px auto;
       background-color: #ffffff;
-      border-radius: 8px;
+      border-radius: 12px;
       overflow: hidden;
-      box-shadow: 0 1px 3px rgba(60,64,67,0.3), 0 4px 8px 3px rgba(60,64,67,0.15);
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      border: 1px solid #e0e0e0;
+    }
+    .festive-border {
+      height: 8px;
+      background: repeating-linear-gradient(
+        45deg,
+        #c41e3a,
+        #c41e3a 20px,
+        #ffffff 20px,
+        #ffffff 40px,
+        #165b33 40px,
+        #165b33 60px,
+        #ffffff 60px,
+        #ffffff 80px
+      );
     }
     .header {
-      background-color: #4285f4;
-      padding: 40px 40px;
+      background-color: #165b33; /* Forest Green */
+      padding: 50px 40px;
       text-align: center;
+      position: relative;
     }
     .header h1 {
       color: #ffffff;
       margin: 0;
-      font-size: 24px;
+      font-size: 28px;
       font-weight: 500;
-      letter-spacing: 0.5px;
+      letter-spacing: 1px;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+    }
+    .snowflake {
+      position: absolute;
+      color: rgba(255,255,255,0.3);
+      font-size: 20px;
     }
     .content {
       padding: 40px;
       line-height: 1.6;
+      background-image: radial-gradient(#f8f9fa 1px, transparent 1px);
+      background-size: 20px 20px;
     }
     .greeting {
-      font-size: 18px;
-      color: #202124;
+      font-size: 20px;
+      color: #c41e3a; /* Christmas Red */
       margin-bottom: 24px;
+      font-weight: 500;
     }
     .message {
       margin-bottom: 32px;
-      color: #5f6368;
+      color: #37474f;
     }
     .message p {
       margin-bottom: 16px;
     }
     .highlight {
-      color: #1a73e8;
+      color: #165b33;
       font-weight: 500;
     }
     .cta-container {
@@ -54,87 +79,94 @@
       margin: 40px 0;
     }
     .button {
-      background-color: #1a73e8;
-      color: #ffffff;
-      padding: 14px 32px;
+      background-color: #c41e3a; /* Christmas Red */
+      color: #ffffff !important;
+      padding: 16px 36px;
       text-decoration: none;
-      border-radius: 4px;
-      font-weight: 500;
+      border-radius: 50px;
+      font-weight: 600;
       font-size: 16px;
       display: inline-block;
-      transition: background-color 0.2s;
-    }
-    /* Email clients might strip hover, but good for web view */
-    .button:hover {
-      background-color: #1765cc;
+      box-shadow: 0 4px 12px rgba(196, 30, 58, 0.3);
+      transition: transform 0.2s, box-shadow 0.2s;
     }
     .footer {
-      background-color: #f1f3f4;
-      padding: 24px;
+      background-color: #f8f9fa;
+      padding: 30px;
       text-align: center;
-      font-size: 12px;
-      color: #5f6368;
+      font-size: 13px;
+      color: #78909c;
+      border-top: 1px solid #eeeeee;
     }
     .gemini-badge {
       display: inline-flex;
       align-items: center;
-      background: linear-gradient(90deg, #eff7cf 0%, #ecf3fe 100%);
-      padding: 8px 16px;
-      border-radius: 16px;
-      font-size: 12px;
-      color: #3c4043;
-      margin-top: 20px;
+      background: linear-gradient(135deg, #e3f2fd 0%, #f3e5f5 100%);
+      padding: 10px 20px;
+      border-radius: 20px;
+      font-size: 13px;
+      color: #455a64;
+      margin-top: 24px;
       font-weight: 500;
+      border: 1px solid #e1bee7;
     }
-    .gemini-icon {
-      margin-right: 8px;
+    .decoration {
+      font-size: 24px;
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
   <div class="container">
+    <div class="festive-border"></div>
     <div class="header">
+      <span class="snowflake" style="top: 10px; left: 20px;">❄</span>
+      <span class="snowflake" style="top: 30px; right: 40px;">❄</span>
+      <span class="snowflake" style="bottom: 15px; left: 50px;">❄</span>
       <h1>Google Cloud Readiness</h1>
+      <div style="color: #ffd700; font-size: 14px; margin-top: 10px; letter-spacing: 2px;">¡FELICES FIESTAS! 🎄</div>
     </div>
     <div class="content">
-      <div class="greeting">Hola,</div>
+      <div class="greeting">¡Hola! 🎁</div>
       
       <div class="message">
         <p>
-          Como parte del equipo de <strong>Google Cloud Readiness</strong>, nuestra misión es asegurar la excelencia en los despliegues de proyectos de nuestros clientes.
+          En esta época de celebración, el equipo de <strong>Google Cloud Readiness</strong> quiere agradecerte por ser parte de
+          nuestra comunidad. Nuestra prioridad siempre es la excelencia en cada proyecto.
         </p>
         <p>
-          Para lograrlo, necesitamos tu visión. Queremos escucharte para construir juntos el futuro.
+          Mientras nos preparamos para cerrar este año, queremos <strong>regalarte</strong> un espacio para tu visión. Tus ideas
+          son el motor que nos impulsa a mejorar.
         </p>
         <p>
-          Te invitamos a compartir tus ideas sobre las actividades de este año y, lo más importante, <strong>¿en qué deberíamos enfocarnos para el 2026?</strong>
+          Te invitamos a compartir tus reflexiones y decirnos: <strong>¿En qué deberíamos enfocarnos para el 2026?</strong>
         </p>
-        <ul>
-          <li>¿Qué necesitan de nosotros?</li>
-          <li>¿Qué nuevas ideas tienen?</li>
-          <li>¿Qué sienten que hace falta?</li>
+        <ul style="list-style: none; padding-left: 0;">
+          <li>✨ ¿Qué necesitas de nosotros?</li>
+          <li>✨ ¿Qué nuevas ideas tienes?</li>
+          <li>✨ ¿Qué sientes que hace falta?</li>
         </ul>
         <p>
-          Hemos preparado <strong>una única pregunta abierta</strong> para que puedas expresarte con total libertad y creatividad.
+          Hemos diseñado <strong>una única pregunta abierta</strong> para que dejes volar tu creatividad.
         </p>
         
         <div style="text-align: center;">
           <div class="gemini-badge">
-            <span>✨ Analizado por Gemini</span>
+            <span>✨ Inteligencia de Gemini</span>
           </div>
-          <p style="font-size: 12px; color: #5f6368; margin-top: 8px;">
-            Todas las respuestas serán analizadas por Gemini para extraer los insights más valiosos.
+          <p style="font-size: 12px; color: #78909c; margin-top: 12px; font-style: italic;">
+            Gemini analizará cada respuesta para iluminar nuestro camino hacia el 2026.
           </p>
         </div>
       </div>
 
       <div class="cta-container">
-        <a href="<?= formUrl ?>" class="button">Compartir mis ideas</a>
+        <a href="<?= formUrl ?>" class="button">Compartir mis ideas de regalo 🎁</a>
       </div>
     </div>
     <div class="footer">
-      <p>&copy; 2025 Google Cloud Readiness Team</p>
-      <p>Este correo fue enviado automáticamente.</p>
+      <p>🎄 Con los mejores deseos, el equipo de Google Cloud Readiness</p>
+      <p style="margin-top: 10px;">&copy; 2025 | Google Cloud</p>
     </div>
   </div>
 </body>
