--- a/email.html
+++ b/email.html
@@ -110,62 +110,60 @@
       font-weight: 500;
       border: 1px solid #e1bee7;
     }
-    .decoration {
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="festive-border"></div>
     <div class="header">
-      <span class="snowflake" style="top: 10px; left: 20px;">❄</span>
-      <span class="snowflake" style="top: 30px; right: 40px;">❄</span>
-      <span class="snowflake" style="bottom: 15px; left: 50px;">❄</span>
+      <span class="snowflake" style="top: 10px; left: 20px;">&#10052;</span>
+      <span class="snowflake" style="top: 30px; right: 40px;">&#10052;</span>
+      <span class="snowflake" style="bottom: 15px; left: 50px;">&#10052;</span>
       <h1>Google Cloud Readiness</h1>
-      <div style="color: #ffd700; font-size: 14px; margin-top: 10px; letter-spacing: 2px;">¡FELICES FIESTAS! 🎄</div>
+      <div style="color: #ffd700; font-size: 14px; margin-top: 10px; letter-spacing: 2px;">&iexcl;FELICES FIESTAS! &#127876;
+      </div>
     </div>
     <div class="content">
-      <div class="greeting">¡Hola! 🎁</div>
+      <div class="greeting">&iexcl;Hola! &#127873;</div>
       
       <div class="message">
         <p>
-          En esta época de celebración, el equipo de <strong>Google Cloud Readiness</strong> quiere agradecerte por ser parte de
-          nuestra comunidad. Nuestra prioridad siempre es la excelencia en cada proyecto.
+          En esta &eacute;poca de celebraci&oacute;n, el equipo de <strong>Google Cloud Readiness</strong> quiere agradecerte por
+          ser parte de nuestra comunidad. Nuestra prioridad siempre es la excelencia en cada proyecto.
         </p>
         <p>
-          Mientras nos preparamos para cerrar este año, queremos <strong>regalarte</strong> un espacio para tu visión. Tus ideas
-          son el motor que nos impulsa a mejorar.
+          Mientras nos preparamos para cerrar este a&ntilde;o, queremos <strong>regalarte</strong> un espacio para tu
+          visi&oacute;n. Tus ideas son el motor que nos impulsa a mejorar.
         </p>
         <p>
-          Te invitamos a compartir tus reflexiones y decirnos: <strong>¿En qué deberíamos enfocarnos para el 2026?</strong>
+          Te invitamos a compartir tus reflexiones y decirnos: <strong>&iquest;En qu&eacute; deber&iacute;amos enfocarnos para el
+            2026?</strong>
         </p>
         <ul style="list-style: none; padding-left: 0;">
-          <li>✨ ¿Qué necesitas de nosotros?</li>
-          <li>✨ ¿Qué nuevas ideas tienes?</li>
-          <li>✨ ¿Qué sientes que hace falta?</li>
+          <li>&#10024; &iquest;Qu&eacute; necesitas de nosotros?</li>
+          <li>&#10024; &iquest;Qu&eacute; nuevas ideas tienes?</li>
+          <li>&#10024; &iquest;Qu&eacute; sientes que hace falta?</li>
         </ul>
         <p>
-          Hemos diseñado <strong>una única pregunta abierta</strong> para que dejes volar tu creatividad.
+          Hemos dise&ntilde;ado <strong>una &uacute;nica pregunta abierta</strong> para que dejes volar tu creatividad.
         </p>
         
         <div style="text-align: center;">
           <div class="gemini-badge">
-            <span>✨ Inteligencia de Gemini</span>
+            <span>&#10024; Inteligencia de Gemini</span>
           </div>
           <p style="font-size: 12px; color: #78909c; margin-top: 12px; font-style: italic;">
-            Gemini analizará cada respuesta para iluminar nuestro camino hacia el 2026.
+            Gemini analizar&aacute; cada respuesta para iluminar nuestro camino hacia el 2026.
           </p>
         </div>
       </div>
 
       <div class="cta-container">
-        <a href="<?= formUrl ?>" class="button">Compartir mis ideas de regalo 🎁</a>
+        <a href="<?= formUrl ?>" class="button">Compartir mis ideas de Mejoras &#127873;</a>
       </div>
     </div>
     <div class="footer">
-      <p>🎄 Con los mejores deseos, el equipo de Google Cloud Readiness</p>
+      <p>&#127876; Con los mejores deseos, el equipo de Google Cloud Readiness</p>
       <p style="margin-top: 10px;">&copy; 2025 | Google Cloud</p>
     </div>
   </div>
