style: change cta button color to google green

--- a/email.html
+++ b/email.html
@@ -164,7 +164,7 @@
       </div>
 
       <div class="cta-container">
-        <a href="<?= formUrl ?>" class="button" style="background-color: #EA4335;">Compartir mis ideas de Mejoras &#127873;</a>
+        <a href="<?= formUrl ?>" class="button" style="background-color: #34A853;">Compartir mis ideas de Mejoras &#127873;</a>
       </div>
     </div>
     <div class="footer">
