style: swap gemini and cta button positions

--- a/email.html
+++ b/email.html
@@ -153,18 +153,18 @@
           Hemos dise&ntilde;ado <strong>una &uacute;nica pregunta abierta</strong> para que puedas expresarte con total libertad.
         </p>
         
-        <div style="text-align: center;">
-          <div class="gemini-badge">
-            <span style="color: #4285F4; margin-right: 4px;">&#10024;</span> Inteligencia de Gemini
-          </div>
-          <p style="font-size: 12px; color: #70757a; margin-top: 12px; font-style: italic;">
-            Gemini analizar&aacute; cada respuesta para iluminar nuestra planeaci&oacute;n 2026.
-          </p>
-        </div>
+      <div class="cta-container">
+        <a href="<?= formUrl ?>" class="button" style="background-color: #34A853;">Compartir mis ideas de Mejoras
+          &#127873;</a>
       </div>
 
-      <div class="cta-container">
-        <a href="<?= formUrl ?>" class="button" style="background-color: #34A853;">Compartir mis ideas de Mejoras &#127873;</a>
+      <div style="text-align: center;">
+        <div class="gemini-badge">
+          <span style="color: #4285F4; margin-right: 4px;">&#10024;</span> Inteligencia de Gemini
+        </div>
+        <p style="font-size: 12px; color: #70757a; margin-top: 12px; font-style: italic;">
+          Gemini analizar&aacute; cada respuesta para iluminar nuestra planeaci&oacute;n 2026.
+        </p>
       </div>
     </div>
     <div class="footer">
