--- a/email_en.html
+++ b/email_en.html
@@ -18,11 +18,18 @@
 <body>
   <div class="container">
     <div class="festive-border"></div>
-    <div class="header"><h1>Excellence in 2026: Leadership Vision</h1></div>
+    <div class="header">
+      <h1>Feedback for 2026</h1>
+    </div>
     <div class="content">
       <div class="greeting">Hello! Happy Holidays! &#127873;</div>
       <div class="message">
-        <p>As we wrap up the year, we want to look ahead to 2026. The <strong>Google Cloud Readiness</strong> team is seeking your leadership vision to drive excellence next year.</p>
+        <p>In 2025 we did a lot, here is a small summary of our LATAM Partner Training impact:</p>
+        <img src="https://via.placeholder.com/600x300?text=2025+Summary+Infographic"
+          style="width:100%; max-width:600px; display:block; margin:20px 0; border-radius:8px;"
+          alt="2025 Summary Infographic" />
+        <p>As we wrap up the year, we want to look ahead to 2026. The <strong>Google Cloud Readiness</strong> team is seeking
+          your leadership feedback to drive excellence next year.</p>
         <p>What should we focus on? What's missing in our strategy? We've designed <strong>one open question</strong> for your creative input.</p>
       </div>
       <div class="cta-container">
