--- a/reminder_en.html
+++ b/reminder_en.html
@@ -18,7 +18,9 @@
 <body>
   <div class="container">
     <div class="festive-border"></div>
-    <div class="header"><h1>Reminder: Your 2026 Vision</h1></div>
+    <div class="header">
+      <h1>Reminder: Feedback for 2026</h1>
+    </div>
     <div class="content">
       <div class="greeting">Hello again! &#127873;</div>
       <div class="message">
