fix: update leadership email image to more robust placeholder and add setup comments

--- a/email_en.html
+++ b/email_en.html
@@ -25,7 +25,8 @@
       <div class="greeting">Hello! Happy Holidays! &#127873;</div>
       <div class="message">
         <p>In 2025 we did a lot, here is a small summary of our LATAM Partner Training impact:</p>
-        <img src="https://via.placeholder.com/600x300?text=2025+Summary+Infographic"
+        <!-- REPLACE THE SRC BELOW WITH YOUR GOOGLE DRIVE LINK (e.g., https://drive.google.com/uc?export=view&id=YOUR_ID) -->
+        <img src="https://placehold.co/600x300/4285F4/FFFFFF?text=2025+Impact+Summary"
           style="width:100%; max-width:600px; display:block; margin:20px 0; border-radius:8px;"
           alt="2025 Summary Infographic" />
         <p>As we wrap up the year, we want to look ahead to 2026. The <strong>Google Cloud Readiness</strong> team is seeking
