--- a/email_en.html
+++ b/email_en.html
@@ -25,7 +25,7 @@
       <div class="greeting">Hello! Happy Holidays! &#127873;</div>
       <div class="message">
         <p>In 2025 we did a lot, here is a small summary of our LATAM Partner Training impact:</p>
-        <img src="https://drive.google.com/uc?export=view&id=1h1VBpbmY2iXH7gSiK9qspu7nlbLQwiaJ"
+        <img src="cid:infographic"
           style="width:100%; max-width:600px; display:block; margin:20px 0; border-radius:8px;"
           alt="2025 Summary Infographic" />
         <p>As we wrap up the year, we want to look ahead to 2026. The <strong>Google Cloud Readiness</strong> team is seeking
