--- a/email_en.html
+++ b/email_en.html
@@ -24,7 +24,7 @@
     <div class="content">
       <div class="greeting">Hello! Happy Holidays! &#127873;</div>
       <div class="message">
-        <p>In 2025 we did a lot, here is a small summary of our LATAM Partner Training impact:</p>
+        <p>In 2025 the LATAM Partner Readiness Team did a lot, here is a small summary of our LATAM Partner Training impact:</p>
         <img src="cid:infographic"
           style="width:100%; max-width:600px; display:block; margin:20px 0; border-radius:8px;"
           alt="2025 Summary Infographic" />
