fix: update leadership reminder subject and header

--- a/reminder_en.html
+++ b/reminder_en.html
@@ -19,7 +19,7 @@
   <div class="container">
     <div class="festive-border"></div>
     <div class="header">
-      <h1>Reminder: Feedback for 2026</h1>
+      <h1>Feedback for Google Cloud Readiness Team 2026</h1>
     </div>
     <div class="content">
       <div class="greeting">Hello again! &#127873;</div>
