fix: update ES and PT reminder subjects and headers with full team name

--- a/reminder_es.html
+++ b/reminder_es.html
@@ -106,7 +106,7 @@
     <div class="header">
       <span class="snowflake" style="top: 10px; left: 20px;">&#10052;</span>
       <span class="snowflake" style="top: 20px; right: 30px;">&#10052;</span>
-      <h1>Recordatorio: Tu visi&oacute;n 2026</h1>
+      <h1>Recordatorio: Tu visi&oacute;n es clave para el equipo Google Cloud Readiness 2026</h1>
     </div>
     <div class="content">
       <div class="greeting">&iexcl;Hola de nuevo! &#127873;</div>
