--- a/reminder_pt.html
+++ b/reminder_pt.html
@@ -18,7 +18,9 @@
 <body>
   <div class="container">
     <div class="festive-border"></div>
-    <div class="header"><h1>Lembrete: Sua vis&atilde;o 2026</h1></div>
+    <div class="header">
+      <h1>Lembrete: Sua vis&atilde;o &eacute; fundamental para a equipe Google Cloud Readiness 2026</h1>
+    </div>
     <div class="content">
       <div class="greeting">Ol&aacute; de novo! &#127873;</div>
       <div class="message">
